# lingcorp

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
src/lingcorp/: __init__.py  annotator.py  cli.py  config.py  cql.py  helpers.py  search.py  server.py
src/lingcorp/cli/: __init__.py
src/lingcorp/clitools/: __init__.py  annotator.py
src/lingcorp/project_template/: cookiecutter.json
src/lingcorp/project_template/{{cookiecutter.project_name}}/: conf.py  parsers.py
src/lingcorp/static/css/: annotation.css  lingcorp.css  styles.css
src/lingcorp/static/js/: annotation.js  concordance.js  scripts.js
src/lingcorp/templates/: annotation.html  base.html  bench.html  concordance.html  record.html  rich_record.html
